--- a/clase0706/src/views/home.html
+++ b/clase0706/src/views/home.html
@@ -1,12 +1,46 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Organizando Y Animando Elementos</title>
-</head>
-<body>
-    
-</body>
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Animaciones y Transiciones</title>
+    <link rel="preconnect" href="https://fonts.googleapis.com" />
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Roboto:ital,wght@0,100;0,300;0,400;0,500;0,700;0,900;1,100;1,300;1,400;1,500;1,700;1,900&display=swap"
+      rel="stylesheet"
+    />
+
+    <link
+      rel="stylesheet"
+      href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.1.1/css/all.min.css"
+      integrity="sha512-KfkfwYDsLkIlwQp6LFnl8zNdLGxu9YAA1QvwINks4PhcElQSvqcyVLLD9aMhXd13uQjoXtEKNosOWaZqXgel0g=="
+      crossorigin="anonymous"
+      referrerpolicy="no-referrer"
+    />
+    <link rel="stylesheet" href="/css/animations.css" />
+  </head>
+  <body>
+    <!--para cuando queremos tener un elemento con position absolute dentro de un position relative-->
+    <section>
+      <span class="position"> </span>
+    </section>
+
+    <!--ejemplo de z-index-->
+    <section>
+      <span class="position"> </span>
+      <article></article>
+    </section>
+
+    <!--ejemplo de fixed-->
+    <span class="different"></span>
+
+    <!--ejemplo de animacion-->
+    <span></span>
+
+    <!--ejemplo de transicion-->
+    <nav></nav>
+
+  </body>
 </html>
