--- a/clase1606/src/views/home.html
+++ b/clase1606/src/views/home.html
@@ -1,12 +1,172 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-    <meta charset="UTF-8">
-    <meta http-equiv="X-UA-Compatible" content="IE=edge">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <head>
+    <meta charset="UTF-8" />
+    <meta http-equiv="X-UA-Compatible" content="IE=edge" />
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-</head>
-<body>
-    
-</body>
+
+    <link rel="stylesheet" href="/css/home.css" />
+    <link rel="stylesheet" href="/css/header.css" />
+    <link rel="stylesheet" href="/css/footer.css" />
+    <link rel="stylesheet" href="/css/header-tablet.css" />
+    <link rel="stylesheet" href="/css/header-desktop.css" />
+    <link rel="stylesheet" href="/css/footer-tablet.css" />
+    <link rel="stylesheet" href="/css/footer-desktop.css" />
+  </head>
+  <body>
+    <header>
+      <section id="header-top">
+        <nav id="brand">
+          <a href="/">
+            <img src="" alt="logo" />
+          </a>
+        </nav>
+        <form action="/" method="get" id="form-search">
+          <fieldset>
+            <input type="text" id="search" name="search" />
+            <button>
+              <i class="fa-solid fa-search"></i>
+            </button>
+          </fieldset>
+        </form>
+        <article>
+          <i class="fa-solid fa-hand"></i>
+          <p>Compra en cuotas</p>
+        </article>
+      </section>
+      <section id="header-bottom">
+        <nav>
+          <a href="/">ofertas</a>
+          <a href="/">Tiendas oficiales</a>
+          <a href="/">Vender</a>
+          <a href="/">Ayuda</a>
+        </nav>
+        <nav>
+          <a href="/register">Crea tu cuenta</a>
+          <a href="/login">Ingresa</a>
+          <a href="/">Mis compras</a>
+        </nav>
+        <nav id="burguer"><a href=""></a></nav>
+      </section>
+    </header>
+    <main>
+      <section>
+        <h2></h2>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+      </section>
+      <section>
+        <h2></h2>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+
+        <article>
+          <figure>
+            <img src="" alt="" />
+          </figure>
+          <section>
+            <i class="fa-solid fa-truck"></i>
+            <p>$10000</p>
+            <p>20%</p>
+            <h3>Producto</h3>
+          </section>
+        </article>
+      </section>
+    </main>
+    <footer>
+      <article>
+        <i class="fa-solid fa-star"></i>
+        <p></p>
+      </article>
+      <article>
+        <i class="fa-solid fa-star"></i>
+        <p></p>
+      </article>
+      <article>
+        <i class="fa-solid fa-star"></i>
+        <p></p>
+      </article>
+    </footer>
+  </body>
 </html>
